Bug 155515 - CRASH: clicking on sheet (gtk3)
Summary: CRASH: clicking on sheet (gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2023-05-26 17:14 UTC by Xisco Faulí
Modified: 2023-05-29 10:59 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (281.30 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2023-05-26 17:14 UTC, Xisco Faulí
Details
bt with debug symbols (9.62 KB, text/plain)
2023-05-26 19:42 UTC, Julien Nabet
Details
bt with debug symbols (7.93 KB, text/plain)
2023-05-26 19:46 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-05-26 17:14:26 UTC
Created attachment 187531 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Click on 'RDBMailPDFOutlook' sheet

-> Crash

Reproduced in

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 578758835e700b38b167753ccda9527f3a8cc43b
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-05-26 17:15:22 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-05-11 09:27:14 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-05-11 10:50:03 +0200
commit d309298d1f70f4ffbf699b1aa1b2bfe08be8c4ef (patch)
tree ae4270374e447851af40986cc788be40be19dfdb
parent 35845a056e332c1d78d536b613aeb3183af09a91 (diff)
tdf#155235 Draw crashes on close: SIGSEGV in SalInstance:GetYieldMutex()

Bisected with: bibisect-linux64-7.6

Adding Cc: to Noel Grandin
Comment 2 Julien Nabet 2023-05-26 19:42:10 UTC
Created attachment 187532 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today + gtk3 rendering, I could reproduce this.

I also noticed these traces on console:
warn:legacy.osl:144451:144451:svx/source/svdraw/svdouno.cxx:457: SdrUnoObj::GetUnoControl: This object is not displayed in that particular view!
warn:legacy.osl:144451:144451:svx/source/svdraw/svdouno.cxx:457: SdrUnoObj::GetUnoControl: This object is not displayed in that particular view!
warn:legacy.osl:144451:144451:svx/source/accessibility/AccessibleControlShape.cxx:631: AccessibleControlShape::disposing: this should never happen!
Comment 3 Julien Nabet 2023-05-26 19:46:25 UTC
Created attachment 187533 [details]
bt with debug symbols

Here's another bt from the trace I indicated in my previous comment.

BTW, no crash with gen rendering as expected since it doesn't use accessibility.
Comment 4 Commit Notification 2023-05-29 10:54:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a12633a9982d34eb8f0b714d5f25cff3040f33ab

tdf#155515 tdf#155528 crash on exit

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.