tdf#155515 tdf#155528 crash on exit

regression from
    commit 3b7db802731826b6cc3b55100470b0c61c1f2dfa
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu May 4 10:06:14 2023 +0200
    tdf#105404 [API CHANGE] add index to accessiblity change event

Fix a handful of things related to accessibility objects being
destructed later than they should and consequently trying at access
other stuff that has already been destructed.

(1) AccessibleControlShape::disposing check the window still exists
(2) DocumentFocusListener::notifyEvent, handle INVALIDATE_ALL_CHILDREN
(3) hold DocumentFocusListener by weak reference in GtkSalData, so that
it dies when the related UI widgets die

Change-Id: I38bf68a748b37e6abc4a8cfcc961436728e081bd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152365
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>